[gd_scene load_steps=11 format=3 uid="uid://cwjaqid3pfwcg"]

[ext_resource type="Script" uid="uid://c835isbctn42e" path="res://menus/main_menu/control.gd" id="1_qtu10"]
[ext_resource type="Texture2D" uid="uid://dpxo3rd8h1wyi" path="res://street.jpg" id="2_ee4bf"]
[ext_resource type="VideoStream" uid="uid://ccy2h23txru8t" path="res://assets/intro/intro_real_real_real_real.ogv" id="2_ycw3r"]
[ext_resource type="FontFile" uid="uid://dtrwi5mjyg2h" path="res://hoshiko_satsuki/Hoshiko Satsuki.ttf" id="3_ee4bf"]
[ext_resource type="FontFile" uid="uid://d3d1p6icmlj67" path="res://hoshiko_satsuki/super-street-fighter-ii-large-colour.colr.ttf" id="4_ycw3r"]
[ext_resource type="Script" uid="uid://dggy0yjbesej3" path="res://menus/main_menu/game_name.gd" id="5_5gjwg"]
[ext_resource type="Script" uid="uid://ce3xpe807fei4" path="res://menus/main_menu/buttons.gd" id="6_ycw3r"]
[ext_resource type="AudioStream" uid="uid://c8wmgn7rs1d76" path="res://assets/bgm/main_menu_bgm.ogg" id="8_gqxwi"]
[ext_resource type="AudioStream" uid="uid://b0w568dklt086" path="res://assets/sfx/na_vls/select_sfx.wav" id="9_0brn6"]

[sub_resource type="LabelSettings" id="LabelSettings_ee4bf"]
font = ExtResource("4_ycw3r")
font_size = 60
font_color = Color(0, 0, 0, 1)
shadow_size = 20
shadow_color = Color(1, 1, 1, 0.6666667)

[node name="GameStatus" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_qtu10")

[node name="CenarioTelaAysu" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(641, 360.00003)
scale = Vector2(0.8306296, 1.3333334)
texture = ExtResource("2_ee4bf")

[node name="intro" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_top = -106.0
offset_right = 1280.0
offset_bottom = 854.0
stream = ExtResource("2_ycw3r")
autoplay = true

[node name="game_name" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -2.0
offset_top = 55.0
offset_right = -2.0
offset_bottom = 115.0
grow_horizontal = 2
text = "AYSU"
label_settings = SubResource("LabelSettings_ee4bf")
horizontal_alignment = 1
script = ExtResource("5_5gjwg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.58900005
anchor_right = 0.5
anchor_bottom = 0.628
offset_left = -83.0
offset_top = -70.08005
offset_right = 83.0
offset_bottom = 85.84
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
script = ExtResource("6_ycw3r")

[node name="1 x 1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ee4bf")
theme_override_font_sizes/font_size = 40
text = "2 Players"

[node name="1 x IA" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_ee4bf")
theme_override_font_sizes/font_size = 40
text = "1 Player"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ee4bf")
theme_override_font_sizes/font_size = 40
text = "Exit"

[node name="bmg" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_gqxwi")
volume_db = -30.0

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_0brn6")
volume_db = -25.0

[connection signal="finished" from="intro" to="." method="_on_intro_finished"]
[connection signal="finished" from="intro" to="game_name" method="_on_intro_finished"]
[connection signal="finished" from="intro" to="VBoxContainer" method="_on_intro_finished"]
[connection signal="mouse_entered" from="VBoxContainer/1 x 1" to="." method="_on__x_1_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/1 x 1" to="." method="_on__x_1_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/1 x IA" to="." method="_on__x_ia_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/1 x IA" to="." method="_on__x_ia_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
